# dining-philosophers

embassy-tasks-mutex/: Cargo.toml
embassy-tasks-mutex/.cargo/: config  config.toml
embassy-tasks-mutex/src/: main.rs
