[package]
name = "embassy-dining-philosophers"
version = "0.1.0"
edition = "2021"


[dependencies]
embassy-sync = { version = "0.1.0", features = ["defmt"] }
embassy-executor = { version = "0.1.0", features = [
    "defmt",
    "integrated-timers",
] }
embassy-time = { version = "0.1.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.1.0", features = [
    "defmt",
    "unstable-traits",
    "nightly",
    "unstable-pac",
    "time-driver",
    "pio",
    "critical-section-impl",
] }
embassy-futures = { version = "0.1.0" }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6" }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = [
    "async-await",
    "cfg-target-has-atomic",
    "unstable",
] }

embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0-alpha.9" }
embedded-hal-async = "0.2.0-alpha.0"
embedded-io = { version = "0.4.0", features = ["async", "defmt"] }
embedded-storage = { version = "0.3" }
static_cell = "1.0.0"
pio = "0.2.1"
rand_core = "0.6.4"

[patch.crates-io]
embassy-time = { git = "https://github.com/embassy-rs/embassy" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy" }
